"Add: Resultados,Carreras,Carlculo Puntos por Piloto y Equipo. Añadir Fichar y Detalle Piloto en Back y Front."